Fix navbar overflow

--- a/themes/xoxzo/static/css/main.css
+++ b/themes/xoxzo/static/css/main.css
@@ -58,7 +58,7 @@ a:hover {
 }
 
 .navbar-nav .nav-item+.nav-item {
-    margin-left: 1.5rem;
+    margin-left: 1.15rem;
 }
 
 .navbar-toggleable-md {
